--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
-	  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "prepare": "svelte-kit sync || echo ''",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "format": "prettier --write .",
-    "lint": "prettier --check .",
-    "test:e2e": "playwright test",
-    "test": "npm run test:e2e",
-    "db:push": "drizzle-kit push",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "analyze": "vite build --mode analyze",
-    "lighthouse": "npx lighthouse http://localhost:5173 --output=html --output-path=./lighthouse-report.html",
-    "performance": "npm run build && npm run preview & sleep 5 && npm run lighthouse"
-  },
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "prettier --write .",
+		"lint": "prettier --check .",
+		"test:e2e": "playwright test",
+		"test": "npm run test:e2e",
+		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate",
+		"db:studio": "drizzle-kit studio",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"analyze": "vite build --mode analyze",
+		"lighthouse": "npx lighthouse http://localhost:5173 --output=html --output-path=./lighthouse-report.html",
+		"performance": "npm run build && npm run preview & sleep 5 && npm run lighthouse"
+	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^4.0.1",
 		"@playwright/test": "^1.49.1",
@@ -53,6 +53,8 @@
 	},
 	"dependencies": {
 		"better-sqlite3": "^11.8.0",
-		"drizzle-orm": "^0.40.0"
+		"bits-ui": "^2.8.13",
+		"drizzle-orm": "^0.40.0",
+		"tailwindcss-animate": "^1.0.7"
 	}
 }
